# venice-qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WorkerThread.h  datachannel.cpp  datachannel.h  datachannelevents.h  errorstartingfiletransferserviceveniceexception.cpp  errorstartingfiletransferserviceveniceexception.h  filetransferservice.cpp  filetransferservice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notavailableportfoundveniceexception.cpp  notavailableportfoundveniceexception.h  notbluetoothadapterfoundveniceexception.cpp  notbluetoothadapterfoundveniceexception.h  notsuitablewifiadapterfoundveniceexception.cpp  notsuitablewifiadapterfoundveniceexception.h  venice-qt.pro  venice-qt_en_US.ts  venicebluetoothuuid.cpp  venicebluetoothuuid.h  veniceexception.cpp  veniceexception.h  venicemessage.cpp  venicemessage.h  veniceservice.cpp  veniceservice.h  venicetimer.cpp  venicetimer.h  wifidatachannel.cpp  wifidatachannel.h
cmake/: build.sh
include/: datachannelevents.h
include/channel/: blebootstrapchannel.h  bootstrapchannel.h  channel.h  datachannel.h  wifidatachannel.h
include/consumer/: filetransferservicediscoverer.h
include/event/: venicetimer.h
include/exception/: errorstartingfiletransferserviceveniceexception.h  notavailableportfoundveniceexception.h  notbluetoothadapterfoundveniceexception.h  notsuitablewifiadapterfoundveniceexception.h  veniceexception.h
include/metadata/: channelmetadata.h  filemetadata.h
include/network/: venicemessage.h
include/receiver/: filereceiver.h  filetransferservicediscoverer.h
include/sender/: filesender.h  filetransferserviceprovider.h
include/service/: filetransferserver.h  filetransferservice.h  veniceservice.h
include/tool/: networkinformationmanager.h  terminallanguagemanager.h
include/ui/: mainwindow.h  venicedevicesdialog.h  venicedeviceslistmodel.h
qmake/: build.sh
src/: main.cpp
src/channel/: blebootstrapchannel.cpp  bootstrapchannel.cpp  channel.cpp  datachannel.cpp  wifidatachannel.cpp
src/consumer/: filetransferservicediscoverer.cpp
src/event/: venicetimer.cpp
src/exception/: errorstartingfiletransferserviceveniceexception.cpp  notavailableportfoundveniceexception.cpp  notbluetoothadapterfoundveniceexception.cpp  notsuitablewifiadapterfoundveniceexception.cpp  veniceexception.cpp
src/metadata/: channelmetadata.cpp  filemetadata.cpp
src/network/: venicemessage.cpp
src/receiver/: filereceiver.cpp  filetransferservicediscoverer.cpp
src/sender/: filesender.cpp  filetransferserviceprovider.cpp  venicebluetoothuuid.cpp
src/service/: filesender.cpp  filetransferserver.cpp  filetransferservice.cpp  venicebluetoothuuid.cpp  veniceservice.cpp
src/tool/: networkinformationmanager.cpp  terminallanguagemanager.cpp
src/ui/: mainwindow.cpp  venicedevicesdialog.cpp  venicedeviceslistmodel.cpp
ui/: mainwindow.ui  venicedevicesdialog.ui
